hphp/hack/test/typecheck/readonly/modify.php.exp
File "modify.php", line 12, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
File "modify.php", line 18, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
File "modify.php", line 27, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
File "modify.php", line 28, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
